--- a/index.qmd
+++ b/index.qmd
@@ -18,6 +18,6 @@ Week | Topic | HTML slides | PDF handouts
 1 | Introduction | [Cat23-1.html](files/Cat23-1.html) | [Cat23-1.pdf](files/Cat23-1.pdf)
 2 | Logistic regression | [Cat23-2.html](files/Cat23-2.html) | [Cat23-2.pdf](files/Cat23-2.pdf)
 3 | Logistic regression | [Cat23-3.html](files/Cat23-3.html) | [Cat23-3.pdf](files/Cat23-3.pdf)
-4 | Ordinal, Multinomial | |
+4 | Ordinal, Multinomial | [Cat23-4.html](files/Cat23-4.html) | [Cat23-4.pdf](files/Cat23-4.pdf)
 5 | Poisson family | |
 6 | Poisson family | |
