--- a/index.qmd
+++ b/index.qmd
@@ -22,7 +22,8 @@ Week | Topic | HTML slides | PDF handouts | Lab handouts
 5 | Poisson family      | [Cat23-5.html](files/Cat23-5.html) | [Cat23-5.pdf](files/Cat23-5.pdf) | [Cat-class5.html](files/Cat-class5.html)
 6 | Poisson family      | [Cat23-6.html](files/Cat23-6.html) | [Cat23-6.pdf](files/Cat23-6.pdf) | [Cat-class6.html](files/Cat-class6.html)
 7 | GLiM wrap-up        | [Cat23-7.html](files/Cat23-7.html) | [Cat23-7.pdf](files/Cat23-7.pdf) | [Cat-class7.html](files/Cat-class7.html)
-8 | Contingency tables  | [Cat23-8.html](files/Cat23-8.html) | [Cat23-8.pdf](files/Cat23-8.pdf) |
-9 | Contingency tables  | [Cat23-9.html](files/Cat23-9.html) | [Cat23-9.pdf](files/Cat23-9.pdf) |
+8 | Contingency tables  | [Cat23-8.html](files/Cat23-8.html) | [Cat23-8.pdf](files/Cat23-8.pdf) | [Cat-class8.html](files/Cat-class8.html)
+9 | Contingency tables  | [Cat23-9.html](files/Cat23-9.html) | [Cat23-9.pdf](files/Cat23-9.pdf) | [Cat-class9.html](files/Cat-class9.html)
+10 | Repeated measures  | [Cat23-10.html](files/Cat23-10.html) | [Cat23-10.pdf](files/Cat23-10.pdf) |
 
 Last updated `r format(Sys.time(), '%B %d, %Y, %X')`
