--- a/index.qmd
+++ b/index.qmd
@@ -26,5 +26,6 @@ Week | Topic | HTML slides | PDF handouts | Lab handouts
 9 | Contingency tables  | [Cat23-9.html](files/Cat23-9.html) | [Cat23-9.pdf](files/Cat23-9.pdf) | [Cat-class9.html](files/Cat-class9.html)
 10 | Repeated measures  | [Cat23-10.html](files/Cat23-10.html) | [Cat23-10.pdf](files/Cat23-10.pdf) |
 11 | Repeated measures  | [Cat23-11.html](files/Cat23-11.html) | [Cat23-11.pdf](files/Cat23-11.pdf) |
+12 | Repeated measures  | [Cat23-12.html](files/Cat23-12.html) | [Cat23-12.pdf](files/Cat23-12.pdf) |
 
 Last updated `r format(Sys.time(), '%B %d, %Y, %X')`
